<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_forms">

    <fragment
        android:id="@+id/nav_forms"
        android:name="ro.code4.casefile.ui.forms.FormsFragment"
        android:label="@string/menu_beneficiaries"
        app:defaultNavHost="true"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/nav_guide"
        android:name="ro.code4.casefile.ui.guide.GuideFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_guide" />

    <fragment
        android:id="@+id/nav_about"
        android:name="ro.code4.casefile.ui.settings.AboutFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_about" />

</navigation>