<?xml version="1.0" encoding="utf-8"?>
<ro.code4.casefile.widget.ScrollViewWithFixedBottom xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/top_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/welcome_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/margin_24dp"
            android:src="@drawable/hello_icon" />

        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Text.Title.Onboarding"
            app:layout_constraintBottom_toTopOf="@id/welcome_description_1"
            app:layout_constraintTop_toBottomOf="@id/top_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/welcome_title" />

        <TextView
            android:id="@+id/welcome_description_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Text.Onboarding"
            app:layout_constraintTop_toBottomOf="@id/welcome_title"
            app:layout_constraintBottom_toTopOf="@id/welcome_description_2"
            android:layout_margin="@dimen/margin_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/welcome_description_1" />

        <TextView
            android:id="@+id/welcome_description_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Text.Onboarding"
            android:layout_marginStart="@dimen/margin_24dp"
            android:layout_marginEnd="@dimen/margin_24dp"
            app:layout_constraintTop_toBottomOf="@id/welcome_description_1"
            app:layout_constraintBottom_toTopOf="@id/welcome_description_3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/welcome_description_2" />

        <TextView
            android:id="@+id/welcome_description_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Text.Onboarding"
            android:layout_margin="@dimen/margin_24dp"
            app:layout_constraintTop_toBottomOf="@id/welcome_description_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/welcome_description_3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/fillFormButton"
        style="@style/BaseButton.Next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_24dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/button_continue" />
</ro.code4.casefile.widget.ScrollViewWithFixedBottom>
