<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MaterialCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_16dp"
        android:paddingTop="@dimen/margin_24dp"
        android:paddingEnd="@dimen/margin_16dp"
        android:paddingBottom="@dimen/margin_24dp">

        <TextView
            android:id="@+id/title"
            style="@style/Text.Question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/comments"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/noteInput"
            style="@style/Input.Note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:hint="@string/comments_hint"
            android:importantForAutofill="no"
            android:padding="@dimen/margin_12dp"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/filenameText"
            style="@style/Text.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:drawableStart="@drawable/ic_file"
            android:drawablePadding="@dimen/margin_8dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noteInput"
            tools:text="Frauda_0342.jpg"
            tools:visibility="visible" />

        <Button
            android:id="@+id/addMediaButton"
            style="@style/Button.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_note_media"
            android:layout_marginTop="@dimen/margin_24dp"
            android:text="@string/note_media"
            app:layout_constraintBottom_toTopOf="@id/submitButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filenameText" />

        <Button
            android:id="@+id/submitButton"
            style="@style/BaseButton.Next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24dp"
            android:enabled="false"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/note_submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addMediaButton"
            tools:layout_editor_absoluteX="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>